api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-api
  namespace: cai
spec:
  selector:
    matchLabels:
      app: devops-test-api
  template:
    metadata:
      labels:
        app: devops-test-api
    spec:
      containers:
      - image: devops-test-api
        name: devops-test-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: devops-test-api
