deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-web
  namespace: cai
spec:
  selector:
    matchLabels:
      app: devops-test-web
  template:
    metadata:
      labels:
        app: devops-test-web
    spec:
      containers:
      - image: devops-test-web:latest
        name: devops-test-web
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: devops-test-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: cai
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: cai
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
